feat: no breaker, aun

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
-spring.cloud.config.uri=http://configserver:10001
+spring.cloud.config.uri=${URLCONFIG}
+#spring.cloud.config.uri=https://localhost:6002
 spring.cloud.config.label=latest
 spring.profiles.active=docker
 spring.application.name=adydmail
